--- a/test-output/old/nopcommerce regression suite/classes.html
+++ b/test-output/old/nopcommerce regression suite/classes.html
@@ -42,6 +42,10 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>tests.UserSearchForProductAutoTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -67,6 +71,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>tests.SendProductToriendTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -106,6 +114,10 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>tests.UserCanChangeCurrencyTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -113,11 +125,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>UserCanSearchForProductSuccessfully</td>
+<td>UserChangeCurrency</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>UserChangeCurrency</td>
+<td>UserCanSearchForProductSuccessfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -135,6 +147,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>tests.UserRegisterTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -162,6 +178,10 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>tests.ContactUsTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -187,6 +207,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>tests.UserSearchForProductTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -214,6 +238,10 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>tests.UserLoginTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -239,4 +267,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>WaitAfterClass</td>
+<td>&nbsp;</td></tr>
 </table>
