--- a/test-output/old/nopcommerce regression suite/methods.html
+++ b/test-output/old/nopcommerce regression suite/methods.html
@@ -1,28 +1,84 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopcommerce regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:43:12</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>19/10/27 16:43:57</td>   <td>45014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">UserCanReguisterSuccessfully</td> 
-  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:44:12</td>   <td>59912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>19/10/27 16:44:12</td>   <td>59944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserLoginTestCase.UserCanloginSuccessfully()[pri:0, instance:tests.UserLoginTestCase@66a3ffec]">UserCanloginSuccessfully</td> 
-  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:44:19</td>   <td>67185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserLoginTestCase@66a3ffec]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/10/27 16:44:19</td>   <td>67185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@77caeb3e]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:44:25</td>   <td>73285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@77caeb3e]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>19/10/27 16:44:25</td>   <td>73286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@1e88b3c]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
-  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:44:29</td>   <td>77310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@1e88b3c]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/10/27 16:44:29</td>   <td>77311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@42d80b78]">UserCanContactUs</td> 
-  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:44:33</td>   <td>81407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@42d80b78]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
-<tr bgcolor="74d26a">  <td>19/10/27 16:44:34</td>   <td>81815</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:49:57</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterTestCase@5e5792a0]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>19/10/27 21:50:13</td>   <td>15474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductReviewTestCase.A_UserCanloginSuccessfully()[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">A_UserCanloginSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:16</td>   <td>18615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>19/10/27 21:50:16</td>   <td>18616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductReviewTestCase.B_UserCanSearchForProductSuccessfully()[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">B_UserCanSearchForProductSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:24</td>   <td>26568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>19/10/27 21:50:24</td>   <td>26568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductReviewTestCase.C_AddProductReviewReview()[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">C_AddProductReviewReview</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:27</td>   <td>29741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="c78c6b">  <td>19/10/27 21:50:27</td>   <td>29741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductReviewTestCase.D_UserLogOut()[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">D_UserLogOut</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:28</td>   <td>30785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:28</td>   <td>30786</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.AddProductReviewTestCase@6f7fd0e6]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>19/10/27 21:50:31</td>   <td>33787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@ae45eb6]">UserCanContactUs</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:33</td>   <td>35914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@ae45eb6]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:33</td>   <td>35914</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.ContactUsTestCase@ae45eb6]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/10/27 21:50:36</td>   <td>38915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.A_UserCanloginSuccessfully()[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">A_UserCanloginSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:38</td>   <td>40752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/10/27 21:50:38</td>   <td>40752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.B_UserCanSearchForProductSuccessfully()[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">B_UserCanSearchForProductSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:40</td>   <td>42756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/10/27 21:50:40</td>   <td>42756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.C_sendToFriend()[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">C_sendToFriend</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:42</td>   <td>44700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>19/10/27 21:50:42</td>   <td>44701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.D_UserLogOut()[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">D_UserLogOut</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:43</td>   <td>45661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:43</td>   <td>45661</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.SendProductToriendTestCase@27efef64]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="f76cb4">  <td>19/10/27 21:50:46</td>   <td>48662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserLoginTestCase.UserCanloginSuccessfully()[pri:0, instance:tests.UserLoginTestCase@26653222]">UserCanloginSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:49</td>   <td>51651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserLoginTestCase@26653222]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:49</td>   <td>51651</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserLoginTestCase@26653222]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>19/10/27 21:50:52</td>   <td>54652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterTestCase@5e5792a0]">UserCanReguisterSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:56</td>   <td>58711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterTestCase@5e5792a0]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:50:56</td>   <td>58711</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterTestCase@5e5792a0]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>19/10/27 21:50:59</td>   <td>61713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@68c4039c]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:01</td>   <td>64077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@68c4039c]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:01</td>   <td>64077</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductAutoTestCase@68c4039c]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="abef66">  <td>19/10/27 21:51:04</td>   <td>67077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@3532ec19]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:06</td>   <td>68881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@3532ec19]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:06</td>   <td>68881</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserSearchForProductTestCase@3532ec19]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>19/10/27 21:51:09</td>   <td>71883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@59f99ea]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:11</td>   <td>73638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@59f99ea]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>19/10/27 21:51:11</td>   <td>73638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@59f99ea]">UserChangeCurrency</td> 
+  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:12</td>   <td>74899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@59f99ea]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:12</td>   <td>74899</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@59f99ea]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/10/27 21:51:15</td>   <td>78064</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterTestCase@5e5792a0]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1291286504</td>   <td></td> </tr>
 </table>
